versioned_docs/version-2.14/reference/subsystems/helm-post-renderer.mdx
---
title: helm-post-renderer
description: |
  Used perform modifications to the final output produced by Helm charts when they&#x27;ve been fully rendered.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Used perform modifications to the final output produced by Helm charts when they&#x27;ve been fully rendered.

Backend: <span className="color--primary">`pants.backend.experimental.helm`</span>

Config section: <span className="color--primary">`[helm-post-renderer]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--helm-post-renderer-version=<str>`}
  env_repr='PANTS_HELM_POST_RENDERER_VERSION'
  toml_repr={`[helm-post-renderer]
version = <str>`}
  default_repr={`yamlpath>=3.6,<3.7`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--helm-post-renderer-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_HELM_POST_RENDERER_EXTRA_REQUIREMENTS'
  toml_repr={`[helm-post-renderer]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "ruamel.yaml>=0.15.96,!=0.17.0,!=0.17.1,!=0.17.2,!=0.17.5,<=0.17.21"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--helm-post-renderer-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_HELM_POST_RENDERER_INTERPRETER_CONSTRAINTS'
  toml_repr={`[helm-post-renderer]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<3.10"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--helm-post-renderer-lockfile=<str>`}
  env_repr='PANTS_HELM_POST_RENDERER_LOCKFILE'
  toml_repr={`[helm-post-renderer]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.14.2/src/python/pants/backend/helm/subsystems/post_renderer.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=helm-post-renderer`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
